<resources>
    <string name="app_name">Anunciar</string>

    <!-- Strings related to login -->
    <string name="title_activity_announcement_detail">AnnouncementDetail</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">anunciar.example.com</string>
    <string name="content_authority">anunciar.dishant.com.anunciar.Database</string>
    <string name="empty_view_text">Cannot get Announcements right now</string>
    <string name="day_today">Today</string>
    <string name="today_deadline">Deadline is today!</string>
    <string name="detail_title">Detail Title</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="welcome_to_anunciar">Welcome to Anunciar</string>
    <string name="anunciar_description">Anunciar is a platform to get all new announcemens from your SR/CR right into your phone or web. To use the services, please sign in and get started.</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="userid">userID</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="created_at">created_at</string>
    <string name="subtitle">The Announcement App</string>
    <string name="dummy_widget_text">Announcement text will be big and will show here</string>
    <string name="dummy_widget_created_text">10 days ago</string>
    <string name="accessibility_add_calendar">Click again to add this announcement to your calendar</string>
    <string name="access_logo_description">Anunciar Logo</string>
    <string name="access_sign_in_button">Click here to sign in wigh Google</string>
    <string name="access_show_profile">Click here to show your profile and log out</string>
    <string name="sync_profile_pic">This is your profile picture</string>
    <string name="access_logout_button">Click here to log out from the application</string>
    <string name="error_text">There is an error getting data from the API, please check your internet connection and restart the app.</string>
    <string name="banner_ad_unit_id">ca-app-pub-9738343196282341/1164447919</string>
    <string name="unknown_id_log">"Unknown loader id: "</string>
    <string name="days_ago_in_words">%d days ago"</string>
    <string name="failed_to_get_profile_pic">Failed to get profile picture</string>
    <string name="user_photo_pref">user_photo</string>
    <string name="pref_package">anunciar.dishant.com.anunciar</string>
    <string name="overdue_days">Overdue %d days ago</string>
    <string name="college">College</string>
    <string name="is_signed_in">isSignedIn</string>
    <string name="user_displayName">user_displayName</string>
    <string name="user_email">user_email</string>
    <string name="user_ID">user_ID</string>
    <string name="user_photo">user_photo</string>
    <string name="sign_in_error">Error Signing you in</string>
    <string name="name_ph">"Name : %s"</string>
    <string name="email_ph">Email: %s</string>
    <string name="user_id_ph">User ID: %s</string>
    <string name="days_left_deadline"> %d days left</string>
</resources>
