<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="anunciar.dishant.com.anunciar.UI.Login">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:id="@+id/Icon"
        android:transitionName="splash1"
        android:contentDescription="@string/access_logo_description" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_anunciar"
        android:layout_below="@+id/Icon"
        android:layout_centerHorizontal="true"
        android:id="@+id/login.welcome"
        android:contentDescription="@string/welcome_to_anunciar"
        android:paddingTop="@dimen/default_value"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login.welcome"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:padding="@dimen/default_value"
        android:id="@+id/anunciar_desc"
        android:background="#FFF"
        android:contentDescription="@string/anunciar_description"
        android:text="@string/anunciar_description"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_value"
        android:contentDescription="@string/access_sign_in_button"
        android:layout_below="@+id/anunciar_desc"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
