<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/colorPrimaryDark"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/access_logo_description"
        android:scaleType="fitXY"
        android:scaleX="3.2"
        android:scaleY="3.2"
        android:src="@mipmap/ic_launcher"
        android:transitionName="splash1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/app_name"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/subtitle"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="15sp" />


</RelativeLayout>